# LL-Mods-Android

./: CMakeLists.txt  README.md  manifest.json
.github/workflows/: build.yml  release.yml
Dobby/: README.md
docs/: SIGNATURES.md  VERIFICATION.md  WRITING_LUA_PACKS.md
examples/lua-behavior-pack/: manifest.json
examples/lua-behavior-pack/scripts/: main.lua
examples/lua-behavior-pack/scripts/lib/: greet.lua
packaging/: package.sh
scripts/: extract_signatures.py  fetch_deps.sh
src/: main.cpp
src/binding/: BindingRegistry.cpp  BindingRegistry.hpp
src/binding/admin/: AdminBindings.cpp
src/binding/net/: NetBindings.cpp
src/binding/server/: Block.cpp  Constants.cpp  Dimension.cpp  Entity.cpp  Events.cpp  ItemStack.cpp  Player.cpp  System.cpp  Vector3.cpp  World.cpp
src/binding/server_ui/: FormBindings.cpp
src/hook/: ChatHooks.cpp  HookManager.cpp  HookManager.hpp  LevelHooks.cpp  PackStackHooks.cpp  ScriptEngineSeam.cpp
src/lua/: LuaEventBus.cpp  LuaEventBus.hpp  LuaScriptHost.cpp  LuaScriptHost.hpp  LuaState.cpp  LuaState.hpp  ModuleImporter.cpp  ModuleImporter.hpp
src/mod/: BedrockLuaMod.cpp  BedrockLuaMod.hpp
src/nbt/: NbtIo.cpp  NbtIo.hpp
src/net/: Downloader.cpp  Downloader.hpp  Http.cpp  Http.hpp  Sha256.cpp  Sha256.hpp
src/pack/: PackManifest.cpp  PackManifest.hpp  PackScanner.cpp  PackScanner.hpp
src/sig/: ModuleScanner.cpp  ModuleScanner.hpp  SignatureRegistry.cpp  SignatureRegistry.hpp  signatures.json
src/util/: AbiString.hpp  Log.hpp  Result.hpp  Strings.hpp
